# djinn

./: .gitignore  404.html  README.md  __main__.py  common.py  concat.md  convert.md  convert_fastq.md  count.md  downsample copy.md  downsample.md  extract.md  fastq.md  filter.md  hic_spoof.md  index.html  index.md  install.md  llms.txt  main.go  meta.yaml  ncbi.md  ncbi.py  pyproject.toml  retype.yml  robots.txt  sample.md  sitemap.xml  sort.md  spoof-hic.md  standard.bam  standardize.md  standarize_fastq.py  utils.py
.github/: dependabot.yml
.github/workflows/: createrelease.yaml  publishdocs.yaml  tests.yaml
categories/: index.html
categories/bam/: index.html
categories/fastq/: index.html
concat/: index.html
convert/: index.html
convert_fastq/: index.html
count/: index.html
djinn/: __main__.py  common.py  downsample.py  extract.py  fastq.py  filter.py  filter_invalid.py  filter_singletons.py  go.mod  hicspoof.py  isolate.py  ncbi.py  separate_singletons.py  sort.py  spoof_hic.py  standardize.py  standardize_bam.py  standardize_fastq.py  utils.py
djinn.go/: go.mod  go.sum
djinn.go/bam/: cli.go  count  count.go  extract.go  main.go
djinn.go/xamtools/: xamtools.go
djinn.py/fastq/: __init__.py  convert.py  count.py  extract.py  ncbi.py  sample.py  singletons.py  sort.py  spoof_hic.py  standardize.py
djinn.py/sam/: count.py  extract.py  invalid.py  sample.py  standardize.py
djinn/count/: count.go
djinn/extract/: extract  extract.go
djinn/fastq/: __init__.py  arachne.py  convert.py  count.py  downsample.py  extract.py  filter_singletons.py  invalid.py  ncbi.py  sample.py  singletons.py  sort.py  spoof_hic.py  standardize.py
djinn/fastx/: io.go
djinn/sam/: __init__.py  assign_mi.py  concat.py  count.py  extract.py  filter_singletons.py  invalid.py  ncbi.py  sample.py  singletons.py  sort.py  standardize.py
djinn/standardize/: standardize  standardize.go
djinn/utils/: barcodes.py  file_ops.py  fq_tools.py  xam_tools.py  (+2 more)
docs/: concat.md  convert.md  count.md  extract.md  filter.md  install.md  ncbi.md  retype.yml  sample.md  sort.md  spoof-hic.md  standardize.md
downsample/: index.html
downsample-copy/: index.html
extract/: index.html
fastq/: index.html
fastqreader/: barcodeutils.go  reader.go  writer.go
filter/: index.html
hic_spoof/: index.html
install/: index.html
ncbi/: index.html
resources/: djinn.yaml  meta.yaml
sample/: index.html
sort/: index.html
spoof-hic/: index.html
standardize/: index.html
tags/: index.html
test/: test.bam  test.bam.bc
(+23 files in other folders)
