[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "djinn"
version = "0.0.0"
authors = [{name = "Pavel Dimens"}]
description = "Convert your linked-read data between formats, almost like magic."
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
dependencies = [
    'click>8.1',
    'rich-click>=1.9.3',
    'pysam>=0.23.0'
]

[project.scripts]
djinn = "djinn.__main__:cli"

[project.urls]
Homepage = "https://github.com/pdimens/djinn"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test/*", ".deprecated/*", "resources/*", ".github/*"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
djinn = { path = ".", editable = true }

[tool.pixi.tasks]
